# egui_docking

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md
examples/: advanced.rs  builder.rs  docking.rs  game_engine_layout.rs  game_engine_registry.rs  game_engine_workspace.rs  multi_viewport_docking.rs  simple.rs
src/: behavior.rs  blueprint.rs  builder.rs  dock_builder.rs  floating.rs  lib.rs  multi_viewport.rs  tree.rs  workspace.rs
src/container/: grid.rs  linear.rs  mod.rs  tabs.rs
src/multi_viewport/: backend_hints.rs  behavior_wrap.rs  debug.rs  detached.rs  drag_state.rs  drop.rs  drop_apply.rs  drop_policy.rs  drop_queue.rs  drop_sanitize.rs  floating.rs  geometry.rs  ghost.rs  ghost_tests.rs  host.rs  integrity.rs  mod.rs  model_tests.rs  monitor_clamp.rs  options.rs  overlay.rs  overlay_decision.rs  overlay_decision_tests.rs  pane_registry.rs  persistence.rs  release.rs  session.rs  surface.rs  title.rs  types.rs  world_model_tests.rs
