[package]
name = "egui_docking"
version = "0.1.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Docking + multi-viewport bridge for egui (tear-off tabs into native windows and re-dock)"
homepage = "https://github.com/Latias94/egui_docking"
repository = "https://github.com/Latias94/egui_docking"
documentation = "https://docs.rs/egui_docking"
readme = "README.md"
keywords = ["egui", "docking", "multiview", "viewport", "editor"]
categories = ["gui"]
rust-version = "1.88"
exclude = ["target/**"]

[dependencies]
egui = { version = "0.33.0", default-features = false }
egui_tiles = { package = "egui_tiles_docking", git = "https://github.com/Latias94/egui_tiles_docking", default-features = false }
ron = { version = "0.10.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
## Layout persistence helpers (ImGui .ini-like), implemented via `serde` + `ron`.
##
## This does NOT serialize your Pane state. Instead, you provide a `PaneId` mapping:
## - save: `FnMut(&Pane) -> PaneId`
## - load: `FnMut(PaneId) -> Pane`
persistence = ["dep:serde", "dep:ron", "egui/serde", "egui_tiles/serde"]

[dev-dependencies]
eframe = { version = "0.33.0", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
  "wayland",
] }

[patch.crates-io]
egui = { git = "https://github.com/Latias94/egui" }
eframe = { git = "https://github.com/Latias94/egui" }
